src/lib/dds3/parser.output
Terminals which are not used

   ASM
   AUTO
   BIT_AND_ASSIGN_OP
   BIT_OR_ASSIGN_OP
   BIT_XOR_ASSIGN_OP
   BREAK
   CASE
   CONTINUE
   DECREMENT_OP
   DEFAULT
   DIVIDE_ASSIGN_OP
   DO
   ELSE
   EXTERN
   FOR
   FORTRAN
   GOTO
   IF
   INCREMENT_OP
   LEFT_SHIFT_ASSIGN_OP
   MINUS_ASSIGN_OP
   MODULO_ASSIGN_OP
   MULTIPLY_ASSIGN_OP
   PLUS_ASSIGN_OP
   REGISTER
   RETURN
   RIGHT_SHIFT_ASSIGN_OP
   STATIC
   STRUCT_POINTER_OP
   SWITCH
   WHILE
   DEFN_VALUE


State 314 conflicts: 38 shift/reduce
State 318 conflicts: 38 shift/reduce


Grammar

    0 $accept: combined $end

    1 combined: TRANSLATION_UNIT translation_unit
    2         | DEFN_UNIT '(' STRING_TOKEN ',' STRING_TOKEN ')'
    3         | IDENT_UNIT '(' STRING_TOKEN ')'
    4         | MAP_EXPR void_or_conditional_expression

    5 void_or_conditional_expression: VOID
    6                               | conditional_expression

    7 translation_unit: external_declaration
    8                 | translation_unit external_declaration

    9 external_declaration: declaration

   10 declaration: declaration_specifiers init_declarator_list ';'
   11            | declaration_specifiers ';'

   12 declaration_specifiers: storage_class_specifier declaration_specifiers
   13                       | storage_class_specifier
   14                       | type_specifier declaration_specifiers
   15                       | type_specifier
   16                       | type_qualifier declaration_specifiers
   17                       | type_qualifier

   18 storage_class_specifier: TYPEDEF

   19 type_specifier: VOID
   20               | CHAR
   21               | SHORT
   22               | INT
   23               | LONG
   24               | FLOAT
   25               | DOUBLE
   26               | SIGNED
   27               | UNSIGNED
   28               | struct_or_union_specifier
   29               | enum_specifier
   30               | TYPEDEF_TOKEN
   31               | COMPLEX
   32               | dds_type_specifier

   33 dds_type_specifier: ASCII1
   34                   | EBCDIC1
   35                   | INTEGER1
   36                   | INTEGER2
   37                   | INTEGER2X
   38                   | INTEGER4
   39                   | INTEGER4X
   40                   | INTEGER8
   41                   | INTEGER8X
   42                   | UNSIGNED1
   43                   | UNSIGNED2
   44                   | UNSIGNED2X
   45                   | UNSIGNED4
   46                   | UNSIGNED4X
   47                   | UNSIGNED8
   48                   | UNSIGNED8X
   49                   | FLOAT4
   50                   | FLOAT4X
   51                   | FLOAT4IBM
   52                   | FLOAT8
   53                   | FLOAT8X
   54                   | FLOAT8IBM
   55                   | FLOAT16
   56                   | FLOAT16X
   57                   | COMPLEX8
   58                   | COMPLEX8X
   59                   | COMPLEX8IBM
   60                   | COMPLEX16
   61                   | COMPLEX16X
   62                   | COMPLEX16IBM
   63                   | COMPLEX32
   64                   | COMPLEX32X

   65 type_qualifier: CONST
   66               | VOLATILE
   67               | ALIGN '(' constant_expression ')'

   68 @1: /* empty */

   69 struct_or_union_specifier: struct_or_union identifier '{' @1 struct_declaration_list '}'
   70                          | struct_or_union identifier

   71 @2: /* empty */

   72 struct_or_union_specifier: struct_or_union '{' @2 struct_declaration_list '}'

   73 struct_or_union: STRUCT
   74                | UNION

   75 struct_declaration_list: struct_declaration
   76                        | struct_declaration_list struct_declaration

   77 init_declarator_list: init_declarator

   78 @3: /* empty */

   79 init_declarator_list: init_declarator_list ',' @3 init_declarator

   80 init_declarator: declarator

   81 @4: /* empty */

   82 init_declarator: declarator ASSIGN_OP @4 initializer

   83 struct_declaration: specifier_qualifier_list struct_declarator_list ';'
   84                   | dds_member_edit dds_edit_declaration ';'

   85 dds_edit_declaration: specifier_qualifier_list struct_declarator_list
   86                     | specifier_qualifier_list

   87 dds_member_edit: '-'
   88                | '*'
   89                | '+'
   90                | '-' '+'
   91                | '*' '+'

   92 specifier_qualifier_list: type_specifier specifier_qualifier_list
   93                         | type_specifier
   94                         | type_qualifier specifier_qualifier_list
   95                         | type_qualifier

   96 struct_declarator_list: struct_declarator

   97 @5: /* empty */

   98 struct_declarator_list: struct_declarator_list ',' @5 struct_declarator

   99 struct_declarator: declarator

  100 @6: /* empty */

  101 struct_declarator: declarator ':' @6 constant_expression

  102 @7: /* empty */

  103 struct_declarator: ':' @7 constant_expression

  104 @8: /* empty */

  105 enum_specifier: dds_enum_or_enumn identifier '{' @8 enumerator_list_FIX '}'

  106 @9: /* empty */

  107 enum_specifier: dds_enum_or_enumn '{' @9 enumerator_list_FIX '}'
  108               | dds_enum_or_enumn identifier

  109 dds_enum_or_enumn: ENUM
  110                  | ENUM1
  111                  | ENUM2
  112                  | ENUM4
  113                  | ENUM8

  114 enumerator_list_FIX: enumerator_list
  115                    | enumerator_list ','

  116 enumerator_list: enumerator

  117 @10: /* empty */

  118 enumerator_list: enumerator_list ',' @10 enumerator

  119 enumerator: identifier

  120 @11: /* empty */

  121 enumerator: identifier ASSIGN_OP @11 constant_expression

  122 declarator: direct_declarator

  123 direct_declarator: identifier
  124                  | '(' declarator ')'
  125                  | direct_declarator '[' constant_expression ']'
  126                  | direct_declarator '[' ']'
  127                  | direct_declarator '(' parameter_type_list ')'
  128                  | direct_declarator '(' identifier_list ')'
  129                  | direct_declarator '(' ')'

  130 parameter_type_list: parameter_list
  131                    | parameter_list ',' ELIPSE

  132 parameter_list: parameter_declaration

  133 @12: /* empty */

  134 parameter_list: parameter_list ',' @12 parameter_declaration

  135 parameter_declaration: declaration_specifiers declarator
  136                      | declaration_specifiers abstract_declarator
  137                      | declaration_specifiers

  138 identifier_list: identifier
  139                | identifier_list ',' identifier

  140 initializer: assignment_expression
  141            | '{' initializer_list '}'
  142            | '{' initializer_list ',' '}'

  143 initializer_list: initializer
  144                 | initializer_list ',' initializer

  145 type_name: specifier_qualifier_list abstract_declarator
  146          | specifier_qualifier_list

  147 abstract_declarator: direct_abstract_declarator

  148 direct_abstract_declarator: '(' abstract_declarator ')'
  149                           | direct_abstract_declarator '[' constant_expression ']'
  150                           | '[' constant_expression ']'
  151                           | direct_abstract_declarator '[' ']'
  152                           | direct_abstract_declarator '(' parameter_type_list ')'
  153                           | '(' parameter_type_list ')'
  154                           | direct_abstract_declarator '(' ')'

  155 expression: assignment_expression

  156 @13: /* empty */

  157 expression: expression ',' @13 assignment_expression

  158 assignment_expression: conditional_expression
  159                      | unary_expression assignment_operator assignment_expression

  160 assignment_operator: ASSIGN_OP

  161 conditional_expression: logical_OR_expression

  162 @14: /* empty */

  163 @15: /* empty */

  164 conditional_expression: logical_OR_expression '?' @14 expression ':' @15 conditional_expression

  165 constant_expression: conditional_expression

  166 logical_OR_expression: logical_AND_expression
  167                      | logical_OR_expression LOGICAL_OR_OP logical_AND_expression

  168 logical_AND_expression: inclusive_OR_expression
  169                       | logical_AND_expression LOGICAL_AND_OP inclusive_OR_expression

  170 inclusive_OR_expression: exclusive_OR_expression
  171                        | inclusive_OR_expression '|' exclusive_OR_expression

  172 exclusive_OR_expression: AND_expression
  173                        | exclusive_OR_expression '^' AND_expression

  174 AND_expression: equality_expression
  175               | AND_expression '&' equality_expression

  176 equality_expression: relational_expression
  177                    | equality_expression EQUAL_TO_OP relational_expression
  178                    | equality_expression NOT_EQUAL_TO_OP relational_expression

  179 relational_expression: shift_expression
  180                      | relational_expression '<' shift_expression
  181                      | relational_expression '>' shift_expression
  182                      | relational_expression LESS_EQUAL_OP shift_expression
  183                      | relational_expression GREATER_EQUAL_OP shift_expression

  184 shift_expression: additive_expression
  185                 | shift_expression LEFT_SHIFT_OP additive_expression
  186                 | shift_expression RIGHT_SHIFT_OP additive_expression

  187 additive_expression: multiplicative_expression
  188                    | additive_expression '+' multiplicative_expression
  189                    | additive_expression '-' multiplicative_expression

  190 multiplicative_expression: cast_expression
  191                          | multiplicative_expression '*' cast_expression
  192                          | multiplicative_expression '/' cast_expression
  193                          | multiplicative_expression '%' cast_expression

  194 cast_expression: unary_expression

  195 @16: /* empty */

  196 @17: /* empty */

  197 cast_expression: '(' @16 type_name ')' @17 cast_expression

  198 unary_expression: postfix_expression
  199                 | unary_operator cast_expression
  200                 | SIZEOF unary_expression

  201 @18: /* empty */

  202 unary_expression: SIZEOF '(' @18 type_name ')'
  203                 | AXIS_SIZE '(' constant_expression ')'

  204 @19: /* empty */

  205 unary_expression: EXIST '(' @19 identifier ')'

  206 @20: /* empty */

  207 @21: /* empty */

  208 unary_expression: FIELD '(' @20 identifier ',' @21 conditional_expression ')'
  209                 | POW '(' expression ',' expression ')'
  210                 | ORDINAL '(' constant_expression ')'
  211                 | LINE_TRC '(' ')'
  212                 | REEL_TRC '(' ')'
  213                 | SQRT '(' expression ')'
  214                 | SIN '(' expression ')'
  215                 | COS '(' expression ')'
  216                 | TAN '(' expression ')'
  217                 | ASIN '(' expression ')'
  218                 | ACOS '(' expression ')'
  219                 | ATAN '(' expression ')'
  220                 | ATAN2 '(' expression ',' expression ')'
  221                 | EXP '(' expression ')'
  222                 | LOG '(' expression ')'
  223                 | LOG10 '(' expression ')'
  224                 | ABS '(' expression ')'
  225                 | SIGN '(' expression ')'
  226                 | CEIL '(' expression ')'
  227                 | FLOOR '(' expression ')'
  228                 | DATEINT '(' expression ')'
  229                 | DATESTRUCT '(' expression ')'

  230 unary_operator: '+'
  231               | '-'
  232               | '~'
  233               | '!'

  234 postfix_expression: primary_expression
  235                   | postfix_expression '[' expression ']'

  236 @22: /* empty */

  237 postfix_expression: postfix_expression '.' identifier @22

  238 primary_expression: identifier
  239                   | constant
  240                   | NOP
  241                   | STRING_TOKEN
  242                   | '(' expression ')'

  243 constant: INTEGER_TOKEN
  244         | CHARACTER_TOKEN
  245         | FLOATING_TOKEN
  246         | ENUMERATION_TOKEN

  247 identifier: IDENTIFIER_TOKEN
  248           | IDENT '(' STRING_TOKEN ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 233
'%' (37) 193
'&' (38) 175
'(' (40) 2 3 67 124 127 128 129 148 152 153 154 197 202 203 205 208
    209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224
    225 226 227 228 229 242 248
')' (41) 2 3 67 124 127 128 129 148 152 153 154 197 202 203 205 208
    209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224
    225 226 227 228 229 242 248
'*' (42) 88 91 191
'+' (43) 89 90 91 188 230
',' (44) 2 79 98 115 118 131 134 139 142 144 157 208 209 220
'-' (45) 87 90 189 231
'.' (46) 237
'/' (47) 192
':' (58) 101 103 164
';' (59) 10 11 83 84
'<' (60) 180
'>' (62) 181
'?' (63) 164
'[' (91) 125 126 149 150 151 235
']' (93) 125 126 149 150 151 235
'^' (94) 173
'{' (123) 69 72 105 107 141 142
'|' (124) 171
'}' (125) 69 72 105 107 141 142
'~' (126) 232
error (256)
TRANSLATION_UNIT (258) 1
DEFN_UNIT (259) 2
IDENT_UNIT (260) 3
MAP_EXPR (261) 4
INTEGER_TOKEN (262) 243
FLOATING_TOKEN (263) 245
CHARACTER_TOKEN (264) 244
ENUMERATION_TOKEN (265) 246
IDENTIFIER_TOKEN (266) 247
TYPEDEF_TOKEN (267) 30
STRING_TOKEN (268) 2 3 241 248
ASM (269)
ASSIGN_OP (270) 82 121 160
AUTO (271)
BIT_AND_ASSIGN_OP (272)
BIT_OR_ASSIGN_OP (273)
BIT_XOR_ASSIGN_OP (274)
BREAK (275)
CASE (276)
CHAR (277) 20
COMPLEX (278) 31
CONST (279) 65
CONTINUE (280)
DECREMENT_OP (281)
DEFAULT (282)
DIVIDE_ASSIGN_OP (283)
DO (284)
DOUBLE (285) 25
ELIPSE (286) 131
ELSE (287)
ENUM (288) 109
EQUAL_TO_OP (289) 177
EXTERN (290)
FLOAT (291) 24
FOR (292)
FORTRAN (293)
GOTO (294)
GREATER_EQUAL_OP (295) 183
IF (296)
INCREMENT_OP (297)
INT (298) 22
LEFT_SHIFT_ASSIGN_OP (299)
LEFT_SHIFT_OP (300) 185
LESS_EQUAL_OP (301) 182
LOGICAL_AND_OP (302) 169
LOGICAL_OR_OP (303) 167
LONG (304) 23
MINUS_ASSIGN_OP (305)
MODULO_ASSIGN_OP (306)
MULTIPLY_ASSIGN_OP (307)
NOT_EQUAL_TO_OP (308) 178
PLUS_ASSIGN_OP (309)
REGISTER (310)
RETURN (311)
RIGHT_SHIFT_ASSIGN_OP (312)
RIGHT_SHIFT_OP (313) 186
SHORT (314) 21
SIGNED (315) 26
SIZEOF (316) 200 202
STATIC (317)
STRUCT (318) 73
STRUCT_POINTER_OP (319)
SWITCH (320)
TYPEDEF (321) 18
UNION (322) 74
UNSIGNED (323) 27
VOID (324) 5 19
VOLATILE (325) 66
WHILE (326)
IDENT (327) 248
DEFN_VALUE (328)
ALIGN (329) 67
AXIS_SIZE (330) 203
EXIST (331) 205
NOP (332) 240
FIELD (333) 208
ORDINAL (334) 210
LINE_TRC (335) 211
REEL_TRC (336) 212
SQRT (337) 213
SIN (338) 214
COS (339) 215
TAN (340) 216
ASIN (341) 217
ACOS (342) 218
ATAN (343) 219
ATAN2 (344) 220
EXP (345) 221
LOG (346) 222
LOG10 (347) 223
POW (348) 209
ABS (349) 224
SIGN (350) 225
CEIL (351) 226
FLOOR (352) 227
DATEINT (353) 228
DATESTRUCT (354) 229
ASCII1 (355) 33
EBCDIC1 (356) 34
UNSIGNED1 (357) 42
UNSIGNED2 (358) 43
UNSIGNED4 (359) 45
UNSIGNED8 (360) 47
INTEGER1 (361) 35
INTEGER2 (362) 36
INTEGER4 (363) 38
INTEGER8 (364) 40
FLOAT4 (365) 49
FLOAT8 (366) 52
FLOAT16 (367) 55
FLOAT4IBM (368) 51
FLOAT8IBM (369) 54
COMPLEX8 (370) 57
COMPLEX16 (371) 60
COMPLEX32 (372) 63
COMPLEX8IBM (373) 59
COMPLEX16IBM (374) 62
ENUM1 (375) 110
ENUM2 (376) 111
ENUM4 (377) 112
ENUM8 (378) 113
UNSIGNED2X (379) 44
UNSIGNED4X (380) 46
UNSIGNED8X (381) 48
INTEGER2X (382) 37
INTEGER4X (383) 39
INTEGER8X (384) 41
FLOAT4X (385) 50
FLOAT8X (386) 53
FLOAT16X (387) 56
COMPLEX8X (388) 58
COMPLEX16X (389) 61
COMPLEX32X (390) 64


Nonterminals, with rules where they appear

$accept (159)
    on left: 0
combined (160)
    on left: 1 2 3 4, on right: 0
void_or_conditional_expression (161)
    on left: 5 6, on right: 4
translation_unit (162)
    on left: 7 8, on right: 1 8
external_declaration (163)
    on left: 9, on right: 7 8
declaration (164)
    on left: 10 11, on right: 9
declaration_specifiers (165)
    on left: 12 13 14 15 16 17, on right: 10 11 12 14 16 135 136 137
storage_class_specifier (166)
    on left: 18, on right: 12 13
type_specifier (167)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32,
    on right: 14 15 92 93
dds_type_specifier (168)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 57 58 59 60 61 62 63 64, on right: 32
type_qualifier (169)
    on left: 65 66 67, on right: 16 17 94 95
struct_or_union_specifier (170)
    on left: 69 70 72, on right: 28
@1 (171)
    on left: 68, on right: 69
@2 (172)
    on left: 71, on right: 72
struct_or_union (173)
    on left: 73 74, on right: 69 70 72
struct_declaration_list (174)
    on left: 75 76, on right: 69 72 76
init_declarator_list (175)
    on left: 77 79, on right: 10 79
@3 (176)
    on left: 78, on right: 79
init_declarator (177)
    on left: 80 82, on right: 77 79
@4 (178)
    on left: 81, on right: 82
struct_declaration (179)
    on left: 83 84, on right: 75 76
dds_edit_declaration (180)
    on left: 85 86, on right: 84
dds_member_edit (181)
    on left: 87 88 89 90 91, on right: 84
specifier_qualifier_list (182)
    on left: 92 93 94 95, on right: 83 85 86 92 94 145 146
struct_declarator_list (183)
    on left: 96 98, on right: 83 85 98
@5 (184)
    on left: 97, on right: 98
struct_declarator (185)
    on left: 99 101 103, on right: 96 98
@6 (186)
    on left: 100, on right: 101
@7 (187)
    on left: 102, on right: 103
enum_specifier (188)
    on left: 105 107 108, on right: 29
@8 (189)
    on left: 104, on right: 105
@9 (190)
    on left: 106, on right: 107
dds_enum_or_enumn (191)
    on left: 109 110 111 112 113, on right: 105 107 108
enumerator_list_FIX (192)
    on left: 114 115, on right: 105 107
enumerator_list (193)
    on left: 116 118, on right: 114 115 118
@10 (194)
    on left: 117, on right: 118
enumerator (195)
    on left: 119 121, on right: 116 118
@11 (196)
    on left: 120, on right: 121
declarator (197)
    on left: 122, on right: 80 82 99 101 124 135
direct_declarator (198)
    on left: 123 124 125 126 127 128 129, on right: 122 125 126 127
    128 129
parameter_type_list (199)
    on left: 130 131, on right: 127 152 153
parameter_list (200)
    on left: 132 134, on right: 130 131 134
@12 (201)
    on left: 133, on right: 134
parameter_declaration (202)
    on left: 135 136 137, on right: 132 134
identifier_list (203)
    on left: 138 139, on right: 128 139
initializer (204)
    on left: 140 141 142, on right: 82 143 144
initializer_list (205)
    on left: 143 144, on right: 141 142 144
type_name (206)
    on left: 145 146, on right: 197 202
abstract_declarator (207)
    on left: 147, on right: 136 145 148
direct_abstract_declarator (208)
    on left: 148 149 150 151 152 153 154, on right: 147 149 151 152
    154
expression (209)
    on left: 155 157, on right: 157 164 209 213 214 215 216 217 218
    219 220 221 222 223 224 225 226 227 228 229 235 242
@13 (210)
    on left: 156, on right: 157
assignment_expression (211)
    on left: 158 159, on right: 140 155 157 159
assignment_operator (212)
    on left: 160, on right: 159
conditional_expression (213)
    on left: 161 164, on right: 6 158 164 165 208
@14 (214)
    on left: 162, on right: 164
@15 (215)
    on left: 163, on right: 164
constant_expression (216)
    on left: 165, on right: 67 101 103 121 125 149 150 203 210
logical_OR_expression (217)
    on left: 166 167, on right: 161 164 167
logical_AND_expression (218)
    on left: 168 169, on right: 166 167 169
inclusive_OR_expression (219)
    on left: 170 171, on right: 168 169 171
exclusive_OR_expression (220)
    on left: 172 173, on right: 170 171 173
AND_expression (221)
    on left: 174 175, on right: 172 173 175
equality_expression (222)
    on left: 176 177 178, on right: 174 175 177 178
relational_expression (223)
    on left: 179 180 181 182 183, on right: 176 177 178 180 181 182
    183
shift_expression (224)
    on left: 184 185 186, on right: 179 180 181 182 183 185 186
additive_expression (225)
    on left: 187 188 189, on right: 184 185 186 188 189
multiplicative_expression (226)
    on left: 190 191 192 193, on right: 187 188 189 191 192 193
cast_expression (227)
    on left: 194 197, on right: 190 191 192 193 197 199
@16 (228)
    on left: 195, on right: 197
@17 (229)
    on left: 196, on right: 197
unary_expression (230)
    on left: 198 199 200 202 203 205 208 209 210 211 212 213 214 215
    216 217 218 219 220 221 222 223 224 225 226 227 228 229,
    on right: 159 194 200
@18 (231)
    on left: 201, on right: 202
@19 (232)
    on left: 204, on right: 205
@20 (233)
    on left: 206, on right: 208
@21 (234)
    on left: 207, on right: 208
unary_operator (235)
    on left: 230 231 232 233, on right: 199
postfix_expression (236)
    on left: 234 235 237, on right: 198 235 237
@22 (237)
    on left: 236, on right: 237
primary_expression (238)
    on left: 238 239 240 241 242, on right: 234
constant (239)
    on left: 243 244 245 246, on right: 239
identifier (240)
    on left: 247 248, on right: 69 70 105 108 119 121 123 138 139 205
    208 237 238


state 0

    0 $accept: . combined $end

    TRANSLATION_UNIT  shift, and go to state 1
    DEFN_UNIT         shift, and go to state 2
    IDENT_UNIT        shift, and go to state 3
    MAP_EXPR          shift, and go to state 4

    combined  go to state 5


state 1

    1 combined: TRANSLATION_UNIT . translation_unit

    TYPEDEF_TOKEN  shift, and go to state 6
    CHAR           shift, and go to state 7
    COMPLEX        shift, and go to state 8
    CONST          shift, and go to state 9
    DOUBLE         shift, and go to state 10
    ENUM           shift, and go to state 11
    FLOAT          shift, and go to state 12
    INT            shift, and go to state 13
    LONG           shift, and go to state 14
    SHORT          shift, and go to state 15
    SIGNED         shift, and go to state 16
    STRUCT         shift, and go to state 17
    TYPEDEF        shift, and go to state 18
    UNION          shift, and go to state 19
    UNSIGNED       shift, and go to state 20
    VOID           shift, and go to state 21
    VOLATILE       shift, and go to state 22
    ALIGN          shift, and go to state 23
    ASCII1         shift, and go to state 24
    EBCDIC1        shift, and go to state 25
    UNSIGNED1      shift, and go to state 26
    UNSIGNED2      shift, and go to state 27
    UNSIGNED4      shift, and go to state 28
    UNSIGNED8      shift, and go to state 29
    INTEGER1       shift, and go to state 30
    INTEGER2       shift, and go to state 31
    INTEGER4       shift, and go to state 32
    INTEGER8       shift, and go to state 33
    FLOAT4         shift, and go to state 34
    FLOAT8         shift, and go to state 35
    FLOAT16        shift, and go to state 36
    FLOAT4IBM      shift, and go to state 37
    FLOAT8IBM      shift, and go to state 38
    COMPLEX8       shift, and go to state 39
    COMPLEX16      shift, and go to state 40
    COMPLEX32      shift, and go to state 41
    COMPLEX8IBM    shift, and go to state 42
    COMPLEX16IBM   shift, and go to state 43
    ENUM1          shift, and go to state 44
    ENUM2          shift, and go to state 45
    ENUM4          shift, and go to state 46
    ENUM8          shift, and go to state 47
    UNSIGNED2X     shift, and go to state 48
    UNSIGNED4X     shift, and go to state 49
    UNSIGNED8X     shift, and go to state 50
    INTEGER2X      shift, and go to state 51
    INTEGER4X      shift, and go to state 52
    INTEGER8X      shift, and go to state 53
    FLOAT4X        shift, and go to state 54
    FLOAT8X        shift, and go to state 55
    FLOAT16X       shift, and go to state 56
    COMPLEX8X      shift, and go to state 57
    COMPLEX16X     shift, and go to state 58
    COMPLEX32X     shift, and go to state 59

    translation_unit           go to state 60
    external_declaration       go to state 61
    declaration                go to state 62
    declaration_specifiers     go to state 63
    storage_class_specifier    go to state 64
    type_specifier             go to state 65
    dds_type_specifier         go to state 66
    type_qualifier             go to state 67
    struct_or_union_specifier  go to state 68
    struct_or_union            go to state 69
    enum_specifier             go to state 70
    dds_enum_or_enumn          go to state 71


state 2

    2 combined: DEFN_UNIT . '(' STRING_TOKEN ',' STRING_TOKEN ')'

    '('  shift, and go to state 72


state 3

    3 combined: IDENT_UNIT . '(' STRING_TOKEN ')'

    '('  shift, and go to state 73


state 4

    4 combined: MAP_EXPR . void_or_conditional_expression

    INTEGER_TOKEN      shift, and go to state 74
    FLOATING_TOKEN     shift, and go to state 75
    CHARACTER_TOKEN    shift, and go to state 76
    ENUMERATION_TOKEN  shift, and go to state 77
    IDENTIFIER_TOKEN   shift, and go to state 78
    STRING_TOKEN       shift, and go to state 79
    SIZEOF             shift, and go to state 80
    VOID               shift, and go to state 81
    IDENT              shift, and go to state 82
    AXIS_SIZE          shift, and go to state 83
    EXIST              shift, and go to state 84
    NOP                shift, and go to state 85
    FIELD              shift, and go to state 86
    ORDINAL            shift, and go to state 87
    LINE_TRC           shift, and go to state 88
    REEL_TRC           shift, and go to state 89
    SQRT               shift, and go to state 90
    SIN                shift, and go to state 91
    COS                shift, and go to state 92
    TAN                shift, and go to state 93
    ASIN               shift, and go to state 94
    ACOS               shift, and go to state 95
    ATAN               shift, and go to state 96
    ATAN2              shift, and go to state 97
    EXP                shift, and go to state 98
    LOG                shift, and go to state 99
    LOG10              shift, and go to state 100
    POW                shift, and go to state 101
    ABS                shift, and go to state 102
    SIGN               shift, and go to state 103
    CEIL               shift, and go to state 104
    FLOOR              shift, and go to state 105
    DATEINT            shift, and go to state 106
    DATESTRUCT         shift, and go to state 107
    '('                shift, and go to state 108
    '-'                shift, and go to state 109
    '+'                shift, and go to state 110
    '~'                shift, and go to state 111
    '!'                shift, and go to state 112

    void_or_conditional_expression  go to state 113
    conditional_expression          go to state 114
    logical_OR_expression           go to state 115
    logical_AND_expression          go to state 116
    inclusive_OR_expression         go to state 117
    exclusive_OR_expression         go to state 118
    AND_expression                  go to state 119
    equality_expression             go to state 120
    relational_expression           go to state 121
    shift_expression                go to state 122
    additive_expression             go to state 123
    multiplicative_expression       go to state 124
    cast_expression                 go to state 125
    unary_expression                go to state 126
    unary_operator                  go to state 127
    postfix_expression              go to state 128
    primary_expression              go to state 129
    constant                        go to state 130
    identifier                      go to state 131


state 5

    0 $accept: combined . $end

    $end  shift, and go to state 132


state 6

   30 type_specifier: TYPEDEF_TOKEN .

    $default  reduce using rule 30 (type_specifier)


state 7

   20 type_specifier: CHAR .

    $default  reduce using rule 20 (type_specifier)


state 8

   31 type_specifier: COMPLEX .

    $default  reduce using rule 31 (type_specifier)


state 9

   65 type_qualifier: CONST .

    $default  reduce using rule 65 (type_qualifier)


state 10

   25 type_specifier: DOUBLE .

    $default  reduce using rule 25 (type_specifier)


state 11

  109 dds_enum_or_enumn: ENUM .

    $default  reduce using rule 109 (dds_enum_or_enumn)


state 12

   24 type_specifier: FLOAT .

    $default  reduce using rule 24 (type_specifier)


state 13

   22 type_specifier: INT .

    $default  reduce using rule 22 (type_specifier)


state 14

   23 type_specifier: LONG .

    $default  reduce using rule 23 (type_specifier)


state 15

   21 type_specifier: SHORT .

    $default  reduce using rule 21 (type_specifier)


state 16

   26 type_specifier: SIGNED .

    $default  reduce using rule 26 (type_specifier)


state 17

   73 struct_or_union: STRUCT .

    $default  reduce using rule 73 (struct_or_union)


state 18

   18 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 18 (storage_class_specifier)


state 19

   74 struct_or_union: UNION .

    $default  reduce using rule 74 (struct_or_union)


state 20

   27 type_specifier: UNSIGNED .

    $default  reduce using rule 27 (type_specifier)


state 21

   19 type_specifier: VOID .

    $default  reduce using rule 19 (type_specifier)


state 22

   66 type_qualifier: VOLATILE .

    $default  reduce using rule 66 (type_qualifier)


state 23

   67 type_qualifier: ALIGN . '(' constant_expression ')'

    '('  shift, and go to state 133


state 24

   33 dds_type_specifier: ASCII1 .

    $default  reduce using rule 33 (dds_type_specifier)


state 25

   34 dds_type_specifier: EBCDIC1 .

    $default  reduce using rule 34 (dds_type_specifier)


state 26

   42 dds_type_specifier: UNSIGNED1 .

    $default  reduce using rule 42 (dds_type_specifier)


state 27

   43 dds_type_specifier: UNSIGNED2 .

    $default  reduce using rule 43 (dds_type_specifier)


state 28

   45 dds_type_specifier: UNSIGNED4 .

    $default  reduce using rule 45 (dds_type_specifier)


state 29

   47 dds_type_specifier: UNSIGNED8 .

    $default  reduce using rule 47 (dds_type_specifier)


state 30

   35 dds_type_specifier: INTEGER1 .

    $default  reduce using rule 35 (dds_type_specifier)


state 31

   36 dds_type_specifier: INTEGER2 .

    $default  reduce using rule 36 (dds_type_specifier)


state 32

   38 dds_type_specifier: INTEGER4 .

    $default  reduce using rule 38 (dds_type_specifier)


state 33

   40 dds_type_specifier: INTEGER8 .

    $default  reduce using rule 40 (dds_type_specifier)


state 34

   49 dds_type_specifier: FLOAT4 .

    $default  reduce using rule 49 (dds_type_specifier)


state 35

   52 dds_type_specifier: FLOAT8 .

    $default  reduce using rule 52 (dds_type_specifier)


state 36

   55 dds_type_specifier: FLOAT16 .

    $default  reduce using rule 55 (dds_type_specifier)


state 37

   51 dds_type_specifier: FLOAT4IBM .

    $default  reduce using rule 51 (dds_type_specifier)


state 38

   54 dds_type_specifier: FLOAT8IBM .

    $default  reduce using rule 54 (dds_type_specifier)


state 39

   57 dds_type_specifier: COMPLEX8 .

    $default  reduce using rule 57 (dds_type_specifier)


state 40

   60 dds_type_specifier: COMPLEX16 .

    $default  reduce using rule 60 (dds_type_specifier)


state 41

   63 dds_type_specifier: COMPLEX32 .

    $default  reduce using rule 63 (dds_type_specifier)


state 42

   59 dds_type_specifier: COMPLEX8IBM .

    $default  reduce using rule 59 (dds_type_specifier)


state 43

   62 dds_type_specifier: COMPLEX16IBM .

    $default  reduce using rule 62 (dds_type_specifier)


state 44

  110 dds_enum_or_enumn: ENUM1 .

    $default  reduce using rule 110 (dds_enum_or_enumn)


state 45

  111 dds_enum_or_enumn: ENUM2 .

    $default  reduce using rule 111 (dds_enum_or_enumn)


state 46

  112 dds_enum_or_enumn: ENUM4 .

    $default  reduce using rule 112 (dds_enum_or_enumn)


state 47

  113 dds_enum_or_enumn: ENUM8 .

    $default  reduce using rule 113 (dds_enum_or_enumn)


state 48

   44 dds_type_specifier: UNSIGNED2X .

    $default  reduce using rule 44 (dds_type_specifier)


state 49

   46 dds_type_specifier: UNSIGNED4X .

    $default  reduce using rule 46 (dds_type_specifier)


state 50

   48 dds_type_specifier: UNSIGNED8X .

    $default  reduce using rule 48 (dds_type_specifier)


state 51

   37 dds_type_specifier: INTEGER2X .

    $default  reduce using rule 37 (dds_type_specifier)


state 52

   39 dds_type_specifier: INTEGER4X .

    $default  reduce using rule 39 (dds_type_specifier)


state 53

   41 dds_type_specifier: INTEGER8X .

    $default  reduce using rule 41 (dds_type_specifier)


state 54

   50 dds_type_specifier: FLOAT4X .

    $default  reduce using rule 50 (dds_type_specifier)


state 55

   53 dds_type_specifier: FLOAT8X .

    $default  reduce using rule 53 (dds_type_specifier)


state 56

   56 dds_type_specifier: FLOAT16X .

    $default  reduce using rule 56 (dds_type_specifier)


state 57

   58 dds_type_specifier: COMPLEX8X .

    $default  reduce using rule 58 (dds_type_specifier)


state 58

   61 dds_type_specifier: COMPLEX16X .

    $default  reduce using rule 61 (dds_type_specifier)


state 59

   64 dds_type_specifier: COMPLEX32X .

    $default  reduce using rule 64 (dds_type_specifier)


state 60

    1 combined: TRANSLATION_UNIT translation_unit .
    8 translation_unit: translation_unit . external_declaration
